--- a/animasjoner/example/web/index.html
+++ b/animasjoner/example/web/index.html
@@ -20,13 +20,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="animated_example">
+  <meta name="apple-mobile-web-app-title" content="animations_example">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>animated_example</title>
+  <title>animations_example</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
